fix url text wrap bug and add icons

--- a/theme/_smui-theme.scss
+++ b/theme/_smui-theme.scss
@@ -1,7 +1,7 @@
 //
 // MDC Theme
 //
-@import '@material/theme/color-palette';
+// @import '@material/theme/color-palette';
 // Svelte Colors!
 // $mdc-theme-primary: #ff3e00;
 // $mdc-theme-secondary: #676778;
@@ -9,3 +9,6 @@
 // $mdc-theme-background: #fff;
 // $mdc-theme-surface: #fff;
 // $mdc-theme-error: $material-color-red-900;
+.mdc-drawer {
+    background-color: ghostwhite;
+}
